# gsl-lite

include/gsl/: gsl-lite.hpp
test/: CMakeLists.txt  gsl-lite.t.hpp  not_null.t.cpp
